<resources>
    <string name="app_name">Pewaa!</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_Friends">Friends</string>
    <string name="title_conversations">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="title_feed_back"><![CDATA[Help & Feedback]]></string>
    <string name="more">More</string>
    <string name="title_sign_out">Log out</string>
    <string name="selected_count">%1$s selected</string>
    <string name="icon_login_password">&#xf023;</string>
    <string name="icon_phone_mobile">&#xf06b;</string>
    <string name="icon_register_user">&#xf007;</string>
    <string name="icon_remove">&#xf00d;</string>
    <string name="number">Phone number</string>
    <string name="Password">Password</string>
    <string name="title_Sign_in">Sign in</string>
    <string name="ForgetPassword">Forget Password ?</string>
    <string name="ConfirmPassword">Confirm your password</string>
    <string name="Fullname">Fullname</string>
    <string name="title_sign_up">Sign up</string>
    <string name="Passwords_does_not_match">Password doesn\'t match</string>
    <string name="NoWishlists">you have no wishlists yet.</string>
    <string name="NoGifts">you have no gifts yet.</string>
    <string name="NoGroups">there\'s no group you may create one </string>
    <string name="error_response">Unable to update.</string>
    <string name="NoContacts">There are no contacts synced yet.</string>
    <string name="type_msg">Type a message</string>
    <string name="NoResult">Nothing</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="error_response_conversations">Unable to update conversations.</string>
    <string name="error_response_groups">Unable to update groups.</string>
    <string name="error_response_messages">Unable to update messages.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_wishlist">New wishlist</string>
    <string name="new_gift">New gift</string>
    <string name="starred_messages">Starred messages</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="search">Search</string>
    <string name="add_contributor">Add Contributor</string>
    <string name="new_message">New Message</string>
    <string name="use_whats_clone">hey i\'m using …</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="picture_profile">Profile preview</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="hello_welcome_to_whats_clone">Welcome</string>
    <string name="next">Next</string>
    <string name="placeholder_sms_of_verification">You will receive an sms with your verification code.</string>
    <string name="resend">Resend</string>
    <string name="enter_the_code_below_to_verify">Enter the code below to verify.</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_ver_code">Please enter your verification code.</string>
    <string name="enter_a_val_number">Enter a valid number phone</string>
    <string name="change_number">Change number</string>
    <string name="invite">INVITE</string>
    <string name="your_current_status">Your current status</string>
    <string name="select_your_new_status">Select your new status</string>
    <string name="title_activity_status">Status</string>
    <string name="Make_sure_delete_status">Do you want to delete your status.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete status</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="error_response_status">Unable to get status</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="deleteALL">Delete All</string>
    <string name="oops_something">Oops something went wrong</string>
    <string name="no_status">** no status **</string>
    <string name="no_username">** no name **</string>
    <string name="edit_status_activity_title">Edit Your Status</string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contributor">Select contributor</string>
    <string name="title_contribute">Contribute</string>
    <string name="title_contributor">Contributor</string>
    <string name="success_response_contacts">Your contacts have been updated successfully</string>
    <string name="images_directory">Images</string>
    <string name="videos_directory">Videos</string>
    <string name="audios_directory">Audio</string>
    <string name="documents_directory">Documents</string>
    <string name="images_profile_directory">Images Profile</string>
    <string name="images_other_directory"> Image Others</string>
    <string name="edit_group_name">edit group name</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="isTyping">Typing …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="lastSeen">Last seen</string>
    <string name="date_format_today">HH:mm</string>
    <string name="date_format_current_month">dd/MM/yyyy HH:mm</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="date_format">d/M/yy</string>
    <string name="call">Call</string>
    <string name="attach">Attach</string>
    <string name="app_service_name">pewaa service</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_video">Video</string>
    <string name="attach_video_record">Record video</string>
    <string name="attach_location">Location</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_camera">Camera</string>
    <string name="attach_gallery">Image</string>
    <string name="attach_document">Document</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="view_contact">View Contact</string>
    <string name="group_info">Group Info</string>
    <string name="search_hint">Search …</string>
    <string name="alert_message_delete_wishlist">Delete Wishlist. Are you sure?</string>
    <string name="join_title">SIGN UP</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="picture_transition">Picture transition</string>
    <string name="user_image_transition">userImage</string>
    <string name="user_name_transition">userName</string>
    <string name="gift_name_transition">giftTitle</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="audio_permission">Audio Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="vibrate_permission">Vibrate Permission</string>
    <string name="receive_sms_permission">Receive sms Permission</string>
    <string name="read_sms_permission">Read sms Permission</string>
    <string name="call_phone_permission">Call Phone Permission</string>
    <string name="get_accounts_permission">Get accounts Permission</string>
    <string name="write_sync_settings_permission">Get accounts Permission</string>
    <string name="read_sync_settings_permission">Get accounts Permission</string>
    <string name="camera_permission_message">Camera permission allows you to take pictures and capture videos. Please allow in App Settings for additional functionality.</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="settings_audio_permission_message">Modify audio permission allows us access to your audios. Please allow in App Settings for additional functionality.</string>
    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_storage_permission_message">Read External permission allows us to read your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_contacts_permission_message">Read Contacts permission allows us to read your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="write_contacts_permission_message">Write Contacts permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="vibrate_permission_message">Vibrate permission . Please allow in App Settings for additional functionality.</string>
    <string name="receive_sms_permission_message">Receive sms permission allows you  to receive SMS messages. Please allow in App Settings for additional functionality.</string>
    <string name="read_sms_permission_message">Read sms permission allows us access to your SMS messages. Please allow in App Settings for additional functionality.</string>
    <string name="call_phone_permission_message">Call phone permission allows you make calls. Please allow in App Settings for additional functionality.</string>
    <string name="get_accounts_permission_message">Get accounts permission . Please allow in App Settings for additional functionality.</string>
    <string name="write_sync_settings_permission_message">Write Sync settings permission . Please allow in App Settings for additional functionality.</string>
    <string name="message_notifications_settings">Message notifications</string>
    <string name="notifications_settings_tone">Notification tone</string>
    <string name="message_notifications_settings_vibrate">Vibrate</string>
    <string name="message_notifications_settings_light">Light</string>
    <string name="key_message_notifications_settings_tone">message_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate">message_notifications_settings_vibrate</string>
    <string name="key_message_notifications_settings_light">message_notifications_settings_light</string>
    <string name="message_notifications_settings_vibrate_off">Vibrate Off</string>
    <string name="message_notifications_settings_vibrate_on">Vibrate On</string>
    <string name="hintName">Name</string>
    <string name="hintDescription">Description</string>
    <string name="hintPrice">Price</string>
    <string name="backdrop_title">Gift Title</string>
    <string name="backdrop_subtitle">Some interesting text</string>
    <string name="transition_contributor_add" translatable="false">transition_contributor_add</string>
    <string name="add_contributor_button_label">ADD</string>
    <string name="cancel_contributor_button_label">CANCEL</string>
    <string name="add_contributors">Add Contributors</string>
    <string name="select_contributor_button_label">Select</string>
</resources>