<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.wishlists.AddWishlistsActivity"
    tools:showIn="@layout/activity_add_wishlist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.fortunekidew.pewaad.ui.LabelledSpinner
            android:id="@+id/spinner"
            app.labelText="Select Wishlist Category"
            app.widgetColor="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:focusable="true"
            android:paddingStart="0dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/edit_name_wrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_wishlist_name"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:ems="10"
                android:hint="@string/hintName"/>
        </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contributors_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:text="@string/add_contributors"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@color/colorGray" />

                <ImageView
                    android:id="@+id/edit_contributors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:background="@drawable/bg_item_round_ripple"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_person_add_gray_24dp" />
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:background="@color/colorGrayDark" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/edit_description_wrapper">
            <EditText
                android:id="@+id/edit_wishlist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="6"
                android:gravity="top|start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:hint="@string/hintDescription"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>