<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.gifts.AddGiftsActivity"
    tools:showIn="@layout/activity_add_gift">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_margin="0dp">

            <com.fortunekidew.pewaad.ui.widget.BadgedFourThreeImageView
                android:id="@+id/giftAvatar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds = "true"
                app:srcCompat="@drawable/ic_file_upload_white_24dp"
                android:layout_gravity="top"
                android:stateListAnimator="@animator/raise"
                android:foreground="@drawable/mid_grey_ripple"/>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addGiftFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="20dp"
                android:clickable="true"
                app:elevation="2dp"
                app:fabSize="normal"
                app:rippleColor="@color/colorWhiteLight"
                app:srcCompat="@drawable/ic_photo_camera_24dp" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/edit_name_wrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_gift_name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:ems="10"
                android:hint="@string/hintName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/edit_price_wrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_gift_price"
                android:imeOptions="actionNext"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hintPrice"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/edit_description_wrapper">
            <EditText
                android:id="@+id/edit_gift_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="6"
                android:gravity="top|left"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:hint="@string/hintDescription"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>